@@ -2,6 +2,7 @@ package school.faang.user_service.controller.recommendation;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.RestController;
 import school.faang.user_service.dto.recommendation.RecommendationRequestDto;
 import school.faang.user_service.dto.recommendation.RejectionDto;
 import school.faang.user_service.dto.recommendation.RequestFilterDto;
@@ -9,14 +10,14 @@ import school.faang.user_service.service.recommendation.RecommendationRequestSer
 
 import java.util.List;
 
-@Controller
+@RestController
 @RequiredArgsConstructor
 public class RecommendationRequestController {
     private final RecommendationRequestService recommendationRequestService;
 
 
     public RecommendationRequestDto requestRecommendation(RecommendationRequestDto recommendationRequest) {
-        if (recommendationRequest.message() == null || recommendationRequest.message().trim().isEmpty()) {
+        if (recommendationRequest.message() == null || recommendationRequest.message().trim().isBlank()) {
             throw new IllegalArgumentException("Recommendation message cannot be null or empty.");
         }
         recommendationRequestService.create(recommendationRequest);
